--- a/Labyrinth/Labyrinth/Content/Game/index.html
+++ b/Labyrinth/Labyrinth/Content/Game/index.html
@@ -2,7 +2,11 @@
 <html>
     <head>
         <title>melonJS Boilerplate</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="index.css">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+        <link rel="stylesheet" type="text/css" media="screen" href="/Content/Game/index.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
         <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
@@ -19,26 +23,27 @@
 
         <!-- melonJS Library -->
         <!-- build:js js/app.min.js -->
-        <script type="text/javascript" src="lib/melonJS.js"></script>
+        <script type="text/javascript" src="Content/game/lib/melonJS.js"></script>
 
         <!-- Plugin(s) -->
-        <script type="text/javascript" src="lib/plugins/debug/debugPanel.js"></script>
+        <script type="text/javascript" src="Content/game/lib/plugins/debug/debugPanel.js"></script>
 
         <!-- Game Scripts -->
-        <script type="text/javascript" src="js/game.js"></script>
-        <script type="text/javascript" src="build/js/resources.js"></script>
+        <script type="text/javascript" src="Content/game/js/game.js"></script>
+        <script type="text/javascript" src="Content/game/js/game.js"></script>
+        <script type="text/javascript" src="Content/game/build/js/resources.js"></script>
 
-        <script type="text/javascript" src="js/entities/entities.js"></script>
-        <script type="text/javascript" src="js/entities/HUD.js"></script>
+        <script type="text/javascript" src="Content/game/js/entities/entities.js"></script>
+        <script type="text/javascript" src="Content/game/js/entities/HUD.js"></script>
 
-        <script type="text/javascript" src="js/screens/title.js"></script>
-        <script type="text/javascript" src="js/screens/play.js"></script>
+        <script type="text/javascript" src="Content/game/js/screens/title.js"></script>
+        <script type="text/javascript" src="Content/game/js/screens/play.js"></script>
         <!-- /build -->
 
         <!-- Bootstrap -->
         <script type="text/javascript">
-            window.onReady(function onReady() {
-                game.onload();
+            $(document).ready(function onReady() {
+                    game.onload();
             });
         </script>
     </body>
